Thu May 21 04:11:03 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (exception_type2symbol): show correct bug message.

Wed May 20 23:19:05 2015  Yusuke Endoh  <mame@ruby-lang.org>

	* lib/base64.rb: Fix rdoc-formatting for padding argument.
	  [fix GH-905][ci skip] Patch by @davydovanton

Wed May 20 13:16:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DEPRECATED_BY): deprecate warning with preferable
	  alternative.

	* configure.in (RUBY_FUNC_ATTRIBUTE): allow attribute arguments in
	  the macro.

Wed May 20 11:23:24 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): return value of libexec's backtrace
	  is size_t, so simply cast as int.

Tue May 19 18:54:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): check source type, must be
	  an IO or a String.  [ruby-core:69219] [Bug #11159]

Tue May 19 17:15:03 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/benchmark.rb: Update Benchmark documentation and formatting.
	  [fix GH-903][ci skip] Patch by @davydovanton

Tue May 19 13:10:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_positive_p): should false on Bignum 0.
	  http://twitter.com/rafaelfranca/status/600509783427391488
	  [ruby-core:69173] [Feature #11151]

Tue May 19 11:22:28 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc2396_parser.rb (initialize_pattern):
	  URI::Generic.build should accept port as a string.
	  pattern[:PORT] is not defined for long.
	  by Dave Slutzkin <daveslutzkin@fastmail.fm>
	  https://github.com/ruby/ruby/pull/804 fix GH-804

Tue May 19 11:18:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_data_typed_object_alloc),
	  (rb_data_object_alloc): add old names for source level backward
	  compatibilities.

	* gc.c (rb_data_object_alloc, rb_data_typed_object_alloc): add
	  aliases for binary level backward compatibilities.

Tue May 19 09:54:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
